--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 .form-container{
   height: 50%;
@@ -56,4 +57,9 @@ input{
     border: none;
     color: red;
     margin-bottom: -35px;
+}
+@media screen and (max-width: 768px) {
+.form-container{
+  width: 80%;
+}
 }
